--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,9 +3,10 @@ driver:
   name: vagrant
 
 provisioner:
-  name: chef_solo
+  name: chef_zero
 
 platforms:
+  - name: debian-7.8
   - name: ubuntu-12.04
   - name: centos-6.5
 
