--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,9 +6,13 @@ provisioner:
   name: chef_zero
 
 platforms:
-  - name: debian-7.8
-  - name: ubuntu-12.04
   - name: centos-6.5
+  - name: centos-7.0
+  - name: debian-7.8
+  - name: fedora-20
+  - name: fedora-21
+  - name: ubuntu-12.04
+  - name: ubuntu-14.04
 
 suites:
   - name: default
